--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
          <h2>WDD330 Assignments</h2>
          <nav>
             <ul id="list">
-               <li><a href="../wdd230/html/week01.html" class="button-design" target="_blank">Week 01</a></li>
-               <li><a href="../wdd230/html/week02.html" class="button-design" target="_blank">Week 02</a></li>
-               <li><a href="../wdd230/html/week03.html" class="button-design" target="_blank">Week 03</a></li>
+               <li><a href="../html/week01.html" class="button-design" target="_blank">Week 01</a></li>
+               <li><a href="../html/week02.html" class="button-design" target="_blank">Week 02</a></li>
+               <li><a href="../html/week03.html" class="button-design" target="_blank">Week 03</a></li>
             </ul>
          </nav>
       </main>
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="../wdd230/js/javascript.js"></script>
+      <script src="../js/javascript.js"></script>
    </body>
 </html>
