--- a/html/week03.html
+++ b/html/week03.html
@@ -13,9 +13,10 @@
       </header>
       <main>
          <h2>Week 3 Notes</h2>
-         <h3>Chapter 3</h3>
+         <h3>Chapter 5: Objects</h3>
          <ul>
-            <li>During</li>
+            <li>Object: self-contained set of related values and functions.</li>
+            <li>Creates an empty object: new Object();</li>
          </ul>
       </main>
       <footer>
