--- a/html/week03.html
+++ b/html/week03.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-      <link rel="stylesheet" href="/css/index.css" />
+      <link rel="stylesheet" href="../wdd330/css/index.css" />
    </head>
    <body>
       <header>
@@ -17,11 +17,14 @@
          <ul>
             <li>Object: self-contained set of related values and functions.</li>
             <li>Creates an empty object: new Object();</li>
+            <li>Objects work similarly to dictionaries in python:</li>
+            <li>  "object.key" gives the value.</li>
+            <li>  "object[value]" also returns the value.</li>
          </ul>
       </main>
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="/js/javascript.js"></script>
+      <script src="../wdd330/js/javascript.js"></script>
    </body>
 </html>
