--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-      <link rel="stylesheet" href="/wdd330/css/index.css" />
+      <link rel="stylesheet" href="../wdd330/css/index.css" />
    </head>
    <body>
       <header>
@@ -15,15 +15,15 @@
          <h2>WDD330 Assignments</h2>
          <nav>
             <ul id="list">
-               <li><a href="../wdd230/html/week01.html" class="button-design" target="_blank">Week 01</a></li>
-               <li><a href="../wdd230/html/week02.html" class="button-design" target="_blank">Week 02</a></li>
-               <li><a href="../wdd230/html/week03.html" class="button-design" target="_blank">Week 03</a></li>
+               <li><a href="../wdd330/html/week01.html" class="button-design" target="_blank">Week 01</a></li>
+               <li><a href="../wdd330/html/week02.html" class="button-design" target="_blank">Week 02</a></li>
+               <li><a href="../wdd330/html/week03.html" class="button-design" target="_blank">Week 03</a></li>
             </ul>
          </nav>
       </main>
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="../wdd230/js/javascript.js"></script>
+      <script src="../wdd330/js/javascript.js"></script>
    </body>
 </html>
