--- a/html/week03.html
+++ b/html/week03.html
@@ -21,6 +21,12 @@
             <li>  "object.key" gives the value.</li>
             <li>  "object[value]" also returns the value.</li>
          </ul>
+         <h3>Chapter 6: Document Object Model</h3>
+         <ul>
+         </ul>
+         <h3>Chapter 7: Events</h3>
+         <ul>
+         </ul>
       </main>
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
