--- a/html/week01.html
+++ b/html/week01.html
@@ -21,6 +21,6 @@
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="/js/javascript.js"></script>
+      <script src="/wdd330/js/javascript.js"></script>
    </body>
 </html>
