--- a/html/week03.html
+++ b/html/week03.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-      <link rel="stylesheet" href="../wdd330/css/index.css" />
+      <link rel="stylesheet" href="/wdd330/css/index.css" />
    </head>
    <body>
       <header>
@@ -20,9 +20,13 @@
             <li>Objects work similarly to dictionaries in python:</li>
             <li>  "object.key" gives the value.</li>
             <li>  "object[value]" also returns the value.</li>
+            <li>"undifined" is the error obtain when trying to acces a property that does not exist.</li>
          </ul>
          <h3>Chapter 6: Document Object Model</h3>
          <ul>
+            <li>DOM: Document Object Model</li>
+            <li>DOMs represents an HTML document as a network of connected nodes that form a tree-like structure.</li>
+            <li></li>
          </ul>
          <h3>Chapter 7: Events</h3>
          <ul>
@@ -31,6 +35,6 @@
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="../wdd330/js/javascript.js"></script>
+      <script src="/wdd330/js/javascript.js"></script>
    </body>
 </html>
