--- a/html/week03.html
+++ b/html/week03.html
@@ -26,7 +26,12 @@
          <ul>
             <li>DOM: Document Object Model</li>
             <li>DOMs represents an HTML document as a network of connected nodes that form a tree-like structure.</li>
-            <li></li>
+            <li>We can use this to access parts of the HTML in the javascript file:</li>
+            <li>  "Document.body" returns the body element of a web page, as we saw in the previous example.</li>
+            <li>  "Document.images" returns a node list of all the images contained in the document.</li>
+            <li>  "Document.links" returns a node list of all the &lt;a> elements and &lt;area> elements that have an href attribute.</li>
+            <li>  "Document.anchors" returns a node list of all the &lt;a> elements that have a name attribute.</li>
+            <li>  "Document.forms" returns a node list of all the forms in the document. This will be used when we cover forms in Chapter 8.</li>
          </ul>
          <h3>Chapter 7: Events</h3>
          <ul>
