--- a/html/week03.html
+++ b/html/week03.html
@@ -35,6 +35,14 @@
          </ul>
          <h3>Chapter 7: Events</h3>
          <ul>
+            <li>Events are the connection between the website and the user input or interactions.</li>
+            <li>"click" The click event occurs when a user clicks with the mouse, presses the Enter key, or taps the screen.</li>
+            <li>"type" The type property returns the type of event that occurred.</li>
+            <li>"target" The target property returns a reference to the node that fired the event.</li>
+            <li>"dblclick" double click.</li>
+            <li>"keydown" Press and hold.</li>
+            <li>"keypress" When key is press.</li>
+            <li>"keyup" When key is release.</li>
          </ul>
       </main>
       <footer>
