--- a/html/week01.html
+++ b/html/week01.html
@@ -15,6 +15,6 @@
             </header>
          </div>
       </section>
-      <script src="/wdd330/week01.js"></script>
+      <script src="/wdd330/js/week01.js"></script>
    </body>
 </html>
