--- a/html/week01.html
+++ b/html/week01.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>WDD330 | Week 1</title>
+      <title>WDD330</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-      <link rel="stylesheet" href="/wdd330/css/week01.css" />
+      <link rel="stylesheet" href="/wdd330/css/index.css" />
    </head>
    <body>
-      <section class='dojo'>
-         <div class='quiz-body'>
-            <header>
-               <h1>Quiz Ninja!</h1>
-            </header>
-         </div>
-      </section>
-      <script src="/wdd330/js/week01.js"></script>
+      <header>
+         <h1>Miguel Marin</h1>
+      </header>
+      <main>
+         <h2>Week 2 Notes</h2>
+         <h3></h3>
+         <ul>
+            <li></li>
+         </ul>
+      </main>
+      <footer>
+         <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
+      </footer>
+      <script src="/wdd330/js/javascript.js"></script>
    </body>
 </html>
