--- a/html/week01.html
+++ b/html/week01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>WDD330</title>
+      <title>WDD330 | Week 1</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
@@ -12,7 +12,30 @@
          <h1>Miguel Marin</h1>
       </header>
       <main>
-         <h2>Week 2 Notes</h2>
+         <h2>Week 1 Notes</h2>
+         <h3>Syllabus</h3>
+<p>Main resources:</p>
+<ol>
+<li>SitePoint.com</li>
+<li>Doing Staff with Web Things 3. GitHub</li>
+<li>Visual Studio Code</li>
+</ol>
+<h3>Doing staff with Web Things</h3>
+<ul>
+<li>I make a quick reading through the assigned pages and I feel confident in learning the new topics in the book. Some of the lessons have parts that I already learn from either previous classes or from my internship.</li>
+Portfolio
+• Steps to set up GitHub repository on Desktop:
+git --version
+6. cd ~
+7. cd desktop
+8. git clone (GitHub repository URL) (File name)
+Master Mobile UX
+• “If you design for the smallest, least powerful device first, then you will focus on the content, and your core functionality. That leads to simple, beautiful apps. If you do it the other way around, it'll be like trying to put a marshmallow into a piggy bank, which is neither simple, nor beautiful.” In other words, mobile first, design for the smallest screen and from there to the bigger ones.
+• Computers reached their sales pick when the smartphones started to appear.
+• We need to rewire our brains for the new devices that have rise since the
+release of the first smartphone.
+Questions
+• The SitePoint.com membership discount from the BYU-I store is giving me several errors. What do I do? Is it going to get fixed?
          <h3></h3>
          <ul>
             <li></li>
