--- a/html/week04.html
+++ b/html/week04.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>WDD330 | Week 1</title>
+      <title>WDD330 | Week 4</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
@@ -11,8 +11,12 @@
       <section class='dojo'>
          <div class='quiz-body'>
             <header>
+               <div id='score'>Score: <strong>0</strong></div>
                <h1>Quiz Ninja!</h1>
             </header>
+            <div id='question'></div>
+            <div id='result'></div>
+            <div id='info'></div>
          </div>
       </section>
       <script src="/wdd330/js/week02.js"></script>
