--- a/html/week04.html
+++ b/html/week04.html
@@ -19,6 +19,7 @@
             <div id='info'></div>
          </div>
       </section>
+      <button id='start'>Click to Start</button>
       <script src="/wdd330/js/week02.js"></script>
    </body>
 </html>
