--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                <li><a href="../wdd330/html/week01.html" class="button-design" target="_blank">Week 01</a></li>
                <li><a href="../wdd330/html/week02.html" class="button-design" target="_blank">Week 02</a></li>
                <li><a href="../wdd330/html/week03.html" class="button-design" target="_blank">Week 03</a></li>
+               <li><a href="../wdd330/html/week04.html" class="button-design" target="_blank">Week 04</a></li>
             </ul>
          </nav>
       </main>
