--- a/html/week04.html
+++ b/html/week04.html
@@ -15,10 +15,12 @@
                <h1>Quiz Ninja!</h1>
             </header>
             <div id='question'></div>
+            <form id='response'>
+               <input name='answer' type='text'>
+               <button type='submit'>Submit Answer</button>
+            </form>
             <div id='result'></div>
             <div id='info'></div>
-         </div>
-      </section>
       <button id='start'>Click to Start</button>
       <script src="/wdd330/js/week04.js"></script>
    </body>
