--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                <li><a href="../wdd330/html/week02.html" class="button-design" target="_blank">Week 02</a></li>
                <li><a href="../wdd330/html/week03.html" class="button-design" target="_blank">Week 03</a></li>
                <li><a href="../wdd330/html/week04.html" class="button-design" target="_blank">Week 04</a></li>
+               <li><a href="../wdd330/html/week05.html" class="button-design" target="_blank">Week 05</a></li>
             </ul>
          </nav>
       </main>
