--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                <li><a href="../wdd330/html/week04.html" class="button-design" target="_blank">Week 04</a></li>
                <li><a href="../wdd330/html/week05.html" class="button-design" target="_blank">Week 05</a></li>
                <li><a href="../wdd330/html/week06.html" class="button-design" target="_blank">Week 06</a></li>
+               <li><a href="../wdd330/html/week07.html" class="button-design" target="_blank">Week 07</a></li>
             </ul>
          </nav>
       </main>
