--- a/html/week07.html
+++ b/html/week07.html
@@ -11,18 +11,17 @@
       <section class='dojo'>
          <div class='quiz-body'>
             <header>
+               <h1>Quiz Ninja!</h1>
                <div id='timer'>Time: <strong>20</strong></div>
                <div id='score'>Score: <strong>0</strong></div>
-               <h1>Quiz Ninja!</h1>
             </header>
             <div id='question'></div>
-            <form id='response'>
-               <input name='answer' type='text'>
-               <button type='submit'>Submit Answer</button>
-            </form>
+            <div id='response'></div>  
             <div id='result'></div>
             <div id='info'></div>
-      <button id='start'>Click to Start</button>
+            <button id='start'>Click to Start</button>
+         </div>
+      </section>
       <script src="/wdd330/js/week07.js"></script>
    </body>
 </html>
