--- a/html/week07.html
+++ b/html/week07.html
@@ -12,7 +12,7 @@
          <div class='quiz-body'>
             <header>
                <h1>Quiz Ninja!</h1>
-               <div id='timer'>Time: <strong>20</strong></div>
+               <div id='timer'>Remaining time: <strong>20</strong></div>
                <div id='score'>Score: <strong>0</strong></div>
             </header>
             <div id='question'></div>
