--- a/html/week06.html
+++ b/html/week06.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>WDD330</title>
+      <title>WDD330 | Week 6</title>
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="This website allows you to create, delate, edit and mark tasks." />
