--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                <li><a href="../wdd330/html/week06.html" class="button-design" target="_blank">Week 06</a></li>
                <li><a href="../wdd330/html/week07.html" class="button-design" target="_blank">Week 07</a></li>
                <li><a href="../wdd330/html/week08.html" class="button-design" target="_blank">Week 08</a></li>
+               <li><a href="../wdd330/html/week08.html" class="button-design" target="_blank">Week 09</a></li>
             </ul>
          </nav>
       </main>
