--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                <li><a href="../wdd330/html/week08.html" class="button-design" target="_blank">Week 08</a></li>
                <li><a href="../wdd330/html/week09.html" class="button-design" target="_blank">Week 09</a></li>
                <li><a href="../wdd330/html/week10.html" class="button-design" target="_blank">Week 10</a></li>
+               <li><a href="../wdd330/html/week14.html" class="button-design" target="_blank">Final Project</a></li>
             </ul>
          </nav>
       </main>
