--- a/html/week14.html
+++ b/html/week14.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="description" content="Assignment portal for Miguel Marin in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
-      <link rel="stylesheet" href="/css/week14.css" />
+      <link rel="stylesheet" href="../wdd330/css/week14.css" />
    </head>
    <body>
       <a href="../wdd330/html/week14.html"><h1>Film Roll Search</h1></a>
@@ -25,6 +25,6 @@
       <footer>
          <p id="copyright">&copy;<span id="year"></span> | Miguel Marin</p>
       </footer>
-      <script src="/js/week14.js"></script>
+      <script src="../wdd330/js/week14.js"></script>
    </body>
 </html>
