--- a/html/week14.html
+++ b/html/week14.html
@@ -8,7 +8,7 @@
       <link rel="stylesheet" href="../css/week14.css" />
    </head>
    <body>
-      <a href="../wdd330/html/week14.html"><h1>Film Roll Search</h1></a>
+      <a href="../html/week14.html"><h1>Film Roll Search</h1></a>
       <header>
           <form  id="form">
               <input type="text" placeholder="Search" id="search" class="search">
